--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="yandex-verification" content="d22f6cf4d8208ea0" />
 	<title>Geda</title>
 </head>
 <body>
