--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 			<!--Eco Template Banner img-->
 			<div class="item">
 				<figure>
-					<img src="extra-images/eco-banner-img01.jpg" alt=""/>
+					<img src="img/main-hero-gestion.jpg" alt=""/>
 					<!--Eco Template Banner caption-->
 					<div class="kode_eco_captions container">
 						<h2><b>G</b>estión</h2>
@@ -243,7 +243,7 @@
 			</div>
 			<div class="item">
 				<figure>
-					<img src="extra-images/eco-banner-img02.jpg" alt=""/>
+					<img src="img/main-hero-empresarial.jpg" alt=""/>
 					<!--Eco Template Banner caption-->
 					<div class="kode_eco_captions container position-center">
             <h2><b>E</b>mpresarial</h2>
@@ -253,7 +253,7 @@
 			</div>
 			<div class="item">
 				<figure>
-					<img src="extra-images/eco-banner-img04.jpg" alt=""/>
+					<img src="img/main-hero-digital.jpg" alt=""/>
 					<!--Eco Template Banner caption-->
 					<div class="kode_eco_captions container position-right">
             <h2><b>D</b>igital</h2>
@@ -263,7 +263,7 @@
 			</div>
       <div class="item">
         <figure>
-          <img src="extra-images/eco-banner-img01.jpg" alt=""/>
+          <img src="img/main-hero-agropecuaria.jpg" alt=""/>
           <!--Eco Template Banner caption-->
           <div class="kode_eco_captions container">
             <h2><b>A</b>gropecuaria</h2>
@@ -273,7 +273,7 @@
       </div>
       <div class="item">
         <figure>
-          <img src="extra-images/eco-banner-img02.jpg" alt=""/>
+          <img src="img/main-hero-ambiental.jpg" alt=""/>
           <!--Eco Template Banner caption-->
           <div class="kode_eco_captions container position-center">
             <h2><b>A</b>mbiental</h2>
@@ -530,53 +530,6 @@
 			</div>
 		</footer>
 		<!--Eco footer ends-->
-		
-		<div class="kode_form_box">
-			<div class="container">
-				<div class="kode_form_modal_newsletter">
-					<!-- Modal -->
-					<div class="modal fade" id="newsletter-popup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-						<div class="modal-dialog" role="document">
-							<div class="modal-content">
-								<div class="modal-header">
-									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-								</div>						 
-								 <div class="modal-form">
-									<div class="kode_login_social-account">
-										<form>
-											<div class="eco-login-registration">
-												<div class="eco_title_form">
-													<h3><b>login</b> for donation</h3>
-													<p>Quis autem velum iure reprehe nderit. Lorem ipsum dolor sit nulla or narjusto laoreet onse ctetur adipisci.</p>
-												</div>
-												<div class="kode-email-account">
-													<label>
-														<input placeholder="Your Email" type="text">
-													</label>
-													<label>
-														<input placeholder="password" type="text">
-													</label>
-												</div>
-												<div class="kode_checkbox_style login_registor-style">
-													<label>
-														<input type="checkbox"><span></span><small>Remember</small>
-													</label>
-												</div>
-												<a class="eco-forgot-account" href="#">Forgot Password</a>
-												<button class="btn-mediem login_style" type="submit" data-toggle="modal" data-target="#form02">donate now</button>
-												<div class="login-user">  
-													<p>Not A Member?  <a href="#">Register Now</a></p>
-												</div>
-											</div>
-										</form>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
 	<!--eco content wrapper ends-->
 
