update icons for services and put it

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	<link href="style.css" rel="stylesheet">
 	<!-- Responsive theme-->
 	<link href="css/responsive.css" rel="stylesheet">
+	<!-- Icomoon -->
+	<link rel="stylesheet" href="css/icomoon.css">
 
 
 </head>
@@ -304,21 +306,21 @@
 							<div class="col-md-4 col-sm-6 col-xs-12">
 								<div class="eco_items-services">
 									<div class="eco_service_cols">
-										<span><i class="icon-arrows"></i></span>
+										<span><i class="icon-comercial-inicio"></i></span>
 										<div>
 											<h4>Comercial</h4>
 											<p>Descripción pendiente.</p>
 										</div>
 									</div>
 									<div class="eco_service_cols">
-										<span><i class="icon-weather"></i></span>
+										<span><i class="icon-ambiental-inicio"></i></span>
 										<div>
 											<h4>Ambiental</h4>
 											<p>Descripción pendiente.</p>
 										</div>
 									</div>
                   <div class="eco_service_cols">
-                    <span><i class="icon-weather"></i></span>
+                    <span><i class="icon-pecuario-inicio"></i></span>
                     <div>
                       <h4>Pecuaria</h4>
                       <p>Descripción pendiente.</p>
@@ -333,16 +335,23 @@
 							<div class="col-md-4 col-sm-6 col-xs-12">
 								<div class="eco_items-services">
 									<div class="eco_service_cols rtl_service">
-										<span><i class="icon-nature"></i></span>
+										<span><i class="icon-digital-inicio"></i></span>
 										<div>
 											<h4>Digital</h4>
 											<p>Descripción pendiente.</p>
 										</div>
 									</div>
 									<div class="eco_service_cols rtl_service">
-										<span><i class="icon-nature-1"></i></span>
+										<span><i class="icon-agricola-inicio"></i></span>
 										<div>
 											<h4>Agricola</h4>
+											<p>Descripción pendiente.</p>
+										</div>
+									</div>
+									<div class="eco_service_cols rtl_service">
+										<span><i class="icon-solar-energy"></i></span>
+										<div>
+											<h4>Energia Solar</h4>
 											<p>Descripción pendiente.</p>
 										</div>
 									</div>
