Added services on home page

--- a/index.html
+++ b/index.html
@@ -384,12 +384,12 @@
 											<div class="front">
 												<figure>
 													<div class="eco-thumb">
-														<img src="extra-images/blog-grid-img01.jpg" alt="">
+														<img src="img/servicio-energia-solar.jpg" alt="">
 													</div>
 												</figure>
 												<div class="feature_blog_caption">
-													<h5><a href="#">Sistemas fotovoltaicos</a></h5>
-													<p>Descripción del servicio descripcion del servicio descripcion del servicio descripcion del servicio descripcion del servicio descripcion del servicio</p>
+													<h5><a href="#">Energia Solar</a></h5>
+													<p>Diseñamos, instalamos y realizamos mantenimiento de sistemas de energia solar (Sistemas fotovoltaicos y calefacción).</p>
                           <a href="#" class="lg-button mediem_btn_02 tcolor">Ver más</a>
 												</div>
 											</div>
@@ -403,12 +403,12 @@
                       <div class="front">
                         <figure>
                           <div class="eco-thumb">
-                            <img src="extra-images/blog-grid-img01.jpg" alt="">
+                            <img src="img/servicio-agricultura-de-precision.jpg" alt="">
                           </div>
                         </figure>
                         <div class="feature_blog_caption">
-                          <h5><a href="#">Agricultura</a></h5>
-                          <p>Descripción del servicio descripcion del servicio descripcion del servicio descripcion del servicio descripcion del servicio descripcion del servicio</p>
+                          <h5><a href="#">Agricultura Urbana</a></h5>
+                          <p>Diseñamos, instalamos y realizamos mantenimiento a los diferentes sistemas de agricultura (Hidroponia, muros verdes).</p>
                           <a href="#" class="lg-button mediem_btn_02 tcolor">Ver más</a>
                         </div>
                       </div>
@@ -417,38 +417,19 @@
                 </div>
 								<!--Eco services flip colums-->
 								<div class="col-md-4 col-sm-6 col-xs-12 responsive-devider-50">
-									<div class="eco_flip-container">
+									<div class="eco_flip-container_">
 										<div class="flipper feature-blog">
 											<div class="front">
 												<figure>
 													<div class="eco-thumb">
-														<img src="extra-images/blog-grid-img03.jpg" alt="">
+														<img src="img/servicio-automatizacion.jpg" alt="">
 													</div>
 												</figure>
 												<div class="feature_blog_caption">
-													<h5><a href="#">Otro</a></h5>
-                          <p>Descripción del servicio descripcion del servicio descripcion del servicio descripcion del servicio descripcion del servicio descripcion del servicio</p>
+													<h5><a href="#">Desarrollo IOT</a></h5>
+                          <p>Automatizamos sistemas de produccion pecuarios y agricolas bajo invernadero y sistemas de riego. </p>
                           <a href="#" class="lg-button mediem_btn_02 tcolor">Ver más</a>
 												</div>
-											</div>
-											<div class="back eco-thumb-bg">	
-												<div class="feature_blog_caption">
-													<h3>urgent cause</h3>
-													<h5>green areas care compaign</h5>
-													<p>Sed convallis varius risus facilisis egestas. Curabitur lacus augue, blandit eu arcu ut, facilisis accumsan nulla. </p>
-													<div class="eco-progress-row">
-														<div class="progress skill-bar">
-															<span class="eco_progress-heading skill">Funded</span>
-															<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="20">
-																<span class="skill"><i class="val">20%</i></span>
-																<small>23 Days Remaining</small>
-																<small class="pull-right">Goal: $18,000</small>
-															</div>
-														</div>
-													</div>
-													<a href="#" class="lg-button">donate now</a>
-												</div>
-												
 											</div>
 										</div>
 									</div>
